# quadrotree

./: CMakeLists.txt  README.MD
examples/: CMakeLists.txt  compressed-quad-tree.cpp  skip-quad-tree.cpp
include/: CMakeLists.txt  aabb.h  compressedNode.h  skip-quad-tree.h  skipNode.h
include/cg/common/: range.h
include/cg/primitives/: contour.h  triangle.h
sources/: CMakeLists.txt~
tests/: CMakeLists.txt  compressed-quad-tree-test.cpp  contains.cpp  quad-tree-test.cpp  rectangle-test.cpp  skip-node-test.cpp  skip-quad-tree-test.cpp
trash/: node.h  skip-node.h  skipNode.h
